Prevent Santa from going above 300y
Presents should be released from Santa's current location, not the
cursor's location. Oftentimes this will be same unless the cursor is
above 300y.

--- a/xmas.html
+++ b/xmas.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link type="text/css" rel="stylesheet" href="css\xmas.css"/>
-        <script type="text/javascript" src="js\ocanvas-2.2.2.js"></script>
-        <script type="text/javascript" src="js\xmas.js"></script>
+        <link type="text/css" rel="stylesheet" href="css/xmas.css"/>
+        <script type="text/javascript" src="js/ocanvas-2.2.2.js"></script>
+        <script type="text/javascript" src="js/xmas.js"></script>
     </head>
 
     <body>
