Actually attempting to add canvas to Github page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <meta name="description" content="Attempt at creating a simple Christmas game with JS/HTML5. Using ocanvas library.">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link type="text/css" rel="stylesheet" href="css/xmas.css"/>
+  <script type="text/javascript" src="js/ocanvas-2.2.2.js"></script>
+  <script type="text/javascript" src="js/xmas.js"></script>
 
 </head>
 
@@ -36,6 +39,8 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
+
+        <canvas id="canvas" height="600" width="800"></canvas>
 
 <h3>Authors and Contributors</h3>
 
@@ -64,7 +69,6 @@
     <a href="https://github.com/benedwards20xx/xmas/tarball/master" class="tar">tar</a><a href="https://github.com/benedwards20xx/xmas/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
-
   
 </body>
 </html>
